nginx-kpkg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: nginx
spec:
  selector:
    app: webserver
  ports:
    - port: 80
      targetPort: 80
