nginx-kpkg/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mirror-ingress
  namespace: nginx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bin.kreato.dev`)
      kind: Rule
      services:
        - name: webserver
          kind: Service
          namespace: nginx
          passHostHeader: true
          scheme: http
          port: 80
  tls:
    secretName: wildcard-kreato.dev-tls
    domains:
      - main: bin.kreato.dev
